# scholar-scraper

./: .gitignore  overview.md  requirements.txt
go/: go.mod
go/api_server/: routes.go  server.go
go/load_balancer/: README.md  main.go
go/shared/: proxy_manager.go
haskell/: Main.hs
haskell/data_validation/: Types.hs  Validate.hs
parser-rust/: Cargo.toml
parser-rust/src/: lib.rs  main.rs  parser.rs
python/scraper/: api_handler.py  data_cleaner.py  scholar_scraper.py
python/utils/: config.py  logger.py
scholar-api/: go.mod  main.go
scraper-python/: captcha_solver.py  config.yaml  main.py  proxy_manager.py  requirements.txt  scraper.py
